--- a/home/templates/adminside/dashboard.html
+++ b/home/templates/adminside/dashboard.html
@@ -53,26 +53,33 @@
                     <li id="imagepopup">
                         <a href="javascript:;">
                             <i class="fa fa-image"></i>
-                            Add Images
+                             products
+                        </a>
+                    </li>
+                    <li>
+                        <a href="UpdateImageFiles.html">
+                            <i class="fa fa-square"></i>
+                            Categories
                         </a>
                     </li>
 
                     <li>
-                        <a href="first_form_data.html">
+                        <a href="{% url 'userlist' %}">
                             <i class="fa fa-users"></i>
-                            First Form Data
+                           Users
                         </a>
                     </li>
 
 
-                    <li>
+                    <!-- <li>
                         <a href="AddNewDetails.html">
                             <i class="fa fa-plus"></i>
-                            Add New Details
+                             Users
                         </a>
-                    </li>
+                    </li> -->
+                   
 
-                    <li> 
+                    <!-- <li> 
                         <a href="allPoint.html"> 
                             <i class="fa fa-add"></i>
                               Points List
@@ -90,12 +97,7 @@
 
                         <ul class="submenus" id="siteSe">
 
-                            <li>
-                                <a href="UpdateImageFiles.html">
-                                    <i class="fa fa-square"></i>
-                                    Update Image Files
-                                </a>
-                            </li>
+                            
 
                             <li>
                                 <a href="BasicSiteSettings.html">
@@ -130,17 +132,17 @@
                                     <i class="fa fa-square"></i>
                                    About Us Page
                                 </a>
-                            </li>
+                            </li> -->
 
 
                           
 
-
+<!-- 
                         </ul>
-                    </li>
+                    </li> -->
 
 
-                    <li>
+                    <!-- <li>
 
                         <a href="javascript:;" data-show="founderteam">
                             <i class="fa fa-users"></i>
@@ -165,10 +167,10 @@
                             </li>
 
                         </ul>
-                    </li>
+                    </li> -->
 
 
-                    <li>
+                    <!-- <li>
 
                         <a href="javascript:;" data-show="tablerow">
                             <i class="fa-solid fa-table"></i>
@@ -200,7 +202,7 @@
                             </li>
 
                         </ul>
-                    </li>
+                    </li> -->
 
                     <!-- <li>
 
@@ -261,7 +263,7 @@
 
 
 
-                    <li>
+                    <!-- <li>
 
                         <a href="javascript:;" data-show="employers_nav">
                             <i class="fa-solid fa-user"></i>
@@ -363,13 +365,13 @@
                     </li>
 
 
-                    
+                     -->
 
 
 
 
 
-                    <li>
+                    <!-- <li>
 
                         <a href="javascript:;" data-show="approvals">
                             <i class="fa fa-check-square-o"></i>
@@ -427,7 +429,7 @@
 
 
                         </ul>
-                    </li>
+                    </li> -->
 
 
                     <li>
@@ -547,10 +549,10 @@
                 </ul>
             </div>
         </aside>
+        {%block userlist %} {% endblock userlist %}
 
-
-        <div class="content_body" id="content_body">
-            <div class="wrapper_content_body">
+        <!-- <div class="content_body" id="content_body">
+            <div class="wrapper_content_body"> -->
                 <!-- <div class="dashboard_statistic">
                     <h4>Members Details</h4>
                     <div class="row">
@@ -611,7 +613,7 @@
 
                     </div>
                 </div> -->
-
+<!-- 
                 <div class="recennt_joings">
                     <h4>Recent users</h4>
 
@@ -718,7 +720,7 @@
                                     data-widget="remove_droplist_emplyers">x</button>
                             </div>
 
-                        </div>
+                        </div> -->
                         <!-- <div class="list_drop_wrapper" id="dropwrapper_collapse__empl_control">
                             <ul class="list_ul_drop">
                                 <li class="col-xs-6 col-md-3 col-lg-2 col-6">
@@ -793,13 +795,13 @@
                                 </li>
                             </ul>
                         </div> -->
-                    </div>
+                    <!-- </div>
                 </div>
             </div>
         </div>
     </div>
-
-
+ -->
+ 
 
     <!-- <div class="image_upload_popup">
         <div class="flex_avodid_pop">
