commit before collect static and after creating userlist(not yet checked its working)

--- a/home/templates/userside/otpVerify.html
+++ b/home/templates/userside/otpVerify.html
@@ -19,6 +19,9 @@
                 <label for="otp">Enter your OTP</label>
                 <input type="text" class="form-control" id="otp" name="otp" required>
                 <input type="hidden" class="form-control"  name="email" value="{{ email }}">
+                <input type="hidden" class="form-control"  name="user_name" value="{{ user_name }}">
+                <input type="hidden" class="form-control"  name="phone_number" value="{{ phone_number}}">
+             
             </div>
             
             <button type="submit">Continue</button>
