--- a/adminapp/templates/adminside/dashboard.html
+++ b/adminapp/templates/adminside/dashboard.html
@@ -71,12 +71,12 @@
                     </li>
 
 
-                    <!-- <li>
-                        <a href="AddNewDetails.html">
-                            <i class="fa fa-plus"></i>
-                             Users
+                    <li>
+                        <a href="{% url 'adminapp:addcategory' %}">
+                            <i class="fa fa-users"></i>
+                             Customers
                         </a>
-                    </li> -->
+                    </li>
                    
 
                     <!-- <li> 
