--- a/adminapp/templates/adminside/userlist.html
+++ b/adminapp/templates/adminside/userlist.html
@@ -7,7 +7,7 @@
     <div class="table_head_sec">
         <h2>ALL USER LIST</h2>
     </div>
-    <!-- <div class="table_filtter">
+    <div class="table_filtter">
         <div class="row">
             <div class="col-6">
                 <div class="table_row_select">
@@ -29,13 +29,13 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
 
     <div class="table_overflow">
         <table id="table_filter" class="tablenormal">
             <thead>
                 <tr>
-                    <th>Id</th>
+                    <th class="sort_table_row">Id</th>
                     <th class="sort_table_row">Name</th>
                     <th class="sort_table_row">Email id</th>
                     <th class="sort_table_row">Mobile</th>
@@ -53,7 +53,7 @@
                     <td>{{user.email}}</td>
                     <td>{{user.useraddress__phone_number}}</td>
                     <td>{{user.is_active}}</td>
-                    {% if not user.is_active %}
+                    {% if user.is_active %}
                     <td><a href="block/{{user.id}}" style="color:red"class="fa-solid fa-user-lock" title="block" type="submit" onclick=blockUser()></a></td>
                     {% else %}
                     <td><a href="unblock/{{user.id}}" style="color:green" class="fa-solid fa-user" title="Unblock" onclick=unblockuser()></a></td>
@@ -65,12 +65,12 @@
             </tbody>
         </table>
     </div>
-    <!-- <p class="showing_data">Showing 1 to 3 of 3 entries</p>
+    <p class="showing_data">Showing 1 to 3 of 3 entries</p>
     <ul class="pagination_table">
         <li><a href="">← Previous</a></li>
         <li><a href="">1</a></li>
         <li><a href="">Next → </a></li>
-    </ul> -->
+    </ul>
 </div>
 
 
