crud of category done .table without pagination.

--- a/adminapp/templates/adminside/dashboard.html
+++ b/adminapp/templates/adminside/dashboard.html
@@ -75,9 +75,9 @@
                             </li>
 
                             <li>
-                                <a href="ExpressReq.html?type=employer">
+                                <a href="{% url 'adminapp:category_list' %}">
                                     <i class="fa fa-square"></i>
-                                    Update or Delete Category
+                                    View Category
                                 </a>
                             </li>
 
