--- a/category/templates/cat_list.html
+++ b/category/templates/cat_list.html
@@ -7,7 +7,7 @@
     <div class="table_head_sec">
         <h2>ALL CATEEGORIES</h2>
     </div>
-    <div class="table_filtter">
+    <!-- <div class="table_filtter">
         <div class="row">
             <div class="col-6">
                 <div class="table_row_select">
@@ -29,7 +29,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="table_overflow">
         <table id="table_filter" class="tablenormal">
@@ -45,6 +45,7 @@
                             <i class="fas fa-plus"></i>Add New
                         </a>
                     </th>
+                    
                     <!-- <th>Edit</th>
                     <th>Delete</th> -->
                 </tr>
@@ -66,13 +67,13 @@
 
 
                     </td>
-                    <td>{{cat.published}}</td>
-                    <td><a href="{% url 'adminapp:update_category' cat.id %}" class="btn text-secondary px-0">
-                        <i class="far fa-edit fa-lg text-dark"></i>
-                    <a href="{%url 'adminapp:delete_category' cat.id %}" class="btn text-secondary px-0">
+                    <td>{{cat.published}}</td><td>
+                    <a href="{% url 'adminapp:update_category' cat.id %}" class="btn text-secondary px-0" title="update">
+                        <i class="far fa-edit fa-lg text-dark mr-3"></i></a>
+                         <a href="{%url 'adminapp:delete_category' cat.id %}" class="btn text-secondary px-0" title="Delete" onclick="confirmDelete(event)">
                    <!-- {% csrf_token %}
                 <button type="submit" class="btn"> -->
-                    <i class="far fa-trash-alt text-danger float-right"></i></td>
+                    <i class="far fa-trash-alt text-danger float-right ml-3"></i></td>
                 <!-- </button>
             </form> -->
                 </tr>
@@ -82,41 +83,38 @@
             </tbody>
         </table>
     </div>
-    <p class="showing_data">Showing 1 to 3 of 3 entries</p>
+    <!-- <p class="showing_data">Showing 1 to 3 of 3 entries</p>
     <ul class="pagination_table">
         <li><a href="">← Previous</a></li>
         <li><a href="">1</a></li>
         <li><a href="">Next → </a></li>
-    </ul>
+    </ul> -->
 </div>
 
 
- ... (other parts of your template) ...
+ <!-- ... (other parts of your template) ... -->
      
-    <script>
-        $(document).ready(function () {
+ <script>
+    $(document).ready(function () {
+        $('#table_filter').DataTable({
+            "paging": true,
+            "lengthChange": false,
+            "searching": true,
+            "ordering": true,
+            "info": true,
+            "autoWidth": false,
+            "pageLength": 5  // Set the number of rows per page
+        });
+    });
+</script>
 
-
-            $('#table_filter').DataTable({
-                "processing": true,
-                "language": {
-                    "processing": "DataTables is currently busy"
-                },
-                paging: true,
-                "aaSorting": [
-                    [3, 'desc']
-                ],
-                'aoColumnDefs': [{
-                    'bSortable': false,
-                    'info': true,
-                    "paging": true,
-                    'aTargets': [0, 1, 2,],
-                    'pageLength': 10
-                }]
-            });
-        })
-        
-        
-    </script>      
+ <script>
+    function confirmDelete(event) {
+        var confirmed = confirm('Are you sure you want to delete the category');
+        if (!confirmed) {
+            event.preventDefault();  // Prevent the default link behavior
+        }
+    } 
+ </script>
 
 {% endblock userlist %}
