--- a/category/templates/cat_update.html
+++ b/category/templates/cat_update.html
@@ -30,27 +30,27 @@
                         <img src="assets/images/banner-1.jpg" alt="">
                     </div>  -->
 
-                    <form action="{% url 'adminapp:update_category' id=cat.pk %}" method="post" enctype="multipart/form-data">
+                    <form action="{% url 'adminapp:update_category' id=id %}" method="post" enctype="multipart/form-data">
                        {%csrf_token%}
                        <div class="col-md-12">
                         <div class="form_group">
                             <label for="name">Category name</label>
-                            <input type="text" placeholder="Category Name" name="cat_name" value="{{cat.cat_name}}">
+                            <input type="text" placeholder="Category Name" name="cat_name" value="{{cat_name}}">
                         </div>
                     </div>
         
                     <div class="col-md-12">
                         <div class="form_group">
                             <label for="">Category Description </label>
-                            <textarea value="{{cat.description}}"name="description" rows="4" required></textarea>
+                            <textarea name="description" rows="4" required>{{description}}</textarea>
                         </div>
                     </div>
                         <div class="row mt-2">
                             <div class="col-md-12">
                                 <div class="form_group">
                                     <label for="">Upload category image</label>
-                                    <img src="{{cat.cat_img.url}}" alt="current image">
-                                    <input type="file" name="image" accept="image/*" required>
+                                    <!-- <img src="{{cat.cat_img.url}}" alt="current image"> -->
+                                    <input type="file" name="image" accept="image/*" >
                                 </div>
                             </div>
                         </div>
@@ -58,7 +58,8 @@
                        
                         <div class="col-md-12">
                         <div class="d-inline-block">
-                            <input type="checkbox" name="is_published" value="True"></div>
+                            <input type="checkbox" name="is_published" {% if is_published %}checked{% endif %} value="True">
+                    </div>
                         <div class="d-inline-block">
                             <label for="">Published</label>
                         </div> </div>
@@ -66,8 +67,8 @@
                       
 
                         <div class="col-12 text-center">
-                            <button class="form_btn btn_green" type="submit">update</button>
-                            <button class="form_btn btn_warning" type="reset" href="{% url 'adminapp:update_category' cat.id %}">Cancel</button>
+                            <button class="form_btn btn_green" type="submit"href="{% url 'adminapp:category_list' %}">update</button>
+                            <button class="form_btn btn_warning" type="submit" href="cat_list.html">Back to List</button>
                         </div>
 
                     </form>
